perf(threads): migrate I/O-bound executors to virtual threads
Replace fixed pools with newThreadPerTaskExecutor(Thread.ofVirtual()) for blocking I/O: VideoScanExecutor, StreamCheckExecutor, SettingsController scanExecutor, SubtitleDownload, VideoMetadataService, VideoEnrichmentWorker, DjEnrichment metadata, ThumbnailQueueProcessor. CPU-bound pools (AudioAnalysis, DJ analysis) remain platform threads. Requires Java 25 (already at maven.compiler.release 25).

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)